working on draw pie @work

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="light_green_500">#8bc34a</color>
+
+    <color name="pie_red">#F44437</color>
+    <color name="pie_yellow">#FDC20E</color>
+    <color name="pie_purple">#9B27AE</color>
+    <color name="pie_grey">#A49EA0</color>
+    <color name="pie_green">#02988C</color>
+    <color name="pie_blue">#1E94F4</color>
 </resources>
